Fix slider image overflow

--- a/src/public/sass/ITCSS/06_components/pages/product/carousel/external-plugins/_swiper.scss
+++ b/src/public/sass/ITCSS/06_components/pages/product/carousel/external-plugins/_swiper.scss
@@ -49,6 +49,7 @@
   }
 }
 .swiper-slide {
+  overflow: hidden;
   box-sizing: border-box;
   border: 0.1875rem solid transparent;
   aspect-ratio: 5 / 3;
